--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="form__field">
                         <!-- только латиница  «собака» @ — обязательный символ; Точка . — тоже обязательный символ. Цифры, подчерк, тире — разрешённые символы-->
-                        <input class="form__input" type="email" name="email" pattern="^(\w+(-+\w+)*)@(\w+)(-+\w+)*\.(\w+)$" placeholder="E-Mail" required />
+                        <input class="form__input" type="email" name="email" pattern="^[A-Za-z](([_-])?[A-Za-z0-9])+@[a-zA-Z0-9]+\.[a-zA-Z]+$" minlength="5" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
